--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#020617",
   "background_color": "#020617",
